# GameOfLife

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE_THIRD_PARTY  README.md  initialBoard.txt  main.cpp  vcpkg.json
.github/: cmake-multi-platform-multi-compiler.yml
.github/workflows/: build-test.yml  cmake-multi-compiler.yml
examples/: blinkers.txt  gliders.txt  heavyweight.txt
src/: gameOfLife  gameOfLife.cpp  gameOfLife.hpp  main.cpp
tests/: gameOfLifeTests.cpp
